--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Node
-        uses: actions/node-js@v4
+        uses: actions/setup-node@v4 
         with:
           node-version: 20
           cache: 'npm'
+
       - name: Install dependencies
         run: npm install
       - name: Build
